--- a/style.css
+++ b/style.css
@@ -1,9 +1,38 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
 h1{
     font-size: 30px;
 }
 .orange-color{
     color: orange;
+}
+section{
+    display: flex;
+   
+}
+.half-width{
+    width: 50%;
+    padding: 20px 10px;
+}
+.half-width img{
+    width: 95%;
+}
+p{
+    text-align: justify;
+}
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(orange,tomato);
+    color: white;
+    font-weight: 700;
+    padding: 10px 30px;
+    border-radius: 20px;
+}
+
+.top-banner{
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
+
 }
